--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@prisma/client": "^5.7.1",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "eslint": "^8.0.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "nodemailer": "^6.9.7",
     "prisma": "^5.7.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^3.0.2"
   }
 }
